--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,12 @@ after_success:
     - docker push mail2pps/multi-worker
 
 deploy:
-   edge: true
    provider: elasticbeanstalk
-   region: "us-east-2"
-   app: "multi-docker"
-   env: "MultiDocker-env"
-   bucket_name: "elasticbeanstalk-us-east-2-524414862098"
-   bucket_path: "multi-docker"
+   region: us-east-2
+   app: multi-docker
+   env: MultiDocker-env
+   bucket_name: elasticbeanstalk-us-east-2-524414862098
+   bucket_path: multi-docker
    on:
         branch: master
    access_key_id: $AWS_ACCESS_KEY
