--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ after_success:
 deploy:
    edge: true
    provider: elasticbeanstalk
-   region: us-east-2
-   app: multi-docker
-   env: MultiDocker-env
-   bucket_name: elasticbeanstalk-us-east-2-524414862098
-   bucket_path: multi-docker
+   region: "us-east-2"
+   app: "multi-docker"
+   env: "MultiDocker-env"
+   bucket_name: "elasticbeanstalk-us-east-2-524414862098"
+   bucket_path: "multi-docker"
    on:
         branch: master
    access_key_id: $AWS_ACCESS_KEY
